--- a/aluraCar/src/pages/escolha/escolha.html
+++ b/aluraCar/src/pages/escolha/escolha.html
@@ -1,9 +1,44 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Sua Escolha</ion-title>
+        <ion-title>{{ carro.nome }}</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    
+    <ion-card>
+        <ion-card-content>
+            <ion-item-group>
+                <ion-item-divider color='light'>
+                    <ion-icon ios="ios-car" md="md-car" item-left></ion-icon>
+                    Veículo 
+                </ion-item-divider>
+                <ion-item>{{ carro.nome }}</ion-item>
+                <ion-item>R${{ carro.preco }}</ion-item>    
+            </ion-item-group>
+
+            <ion-item-group>
+                <ion-item-divider color='light'>
+                    <ion-icon ios="ios-options" md="md-options" item-left></ion-icon>
+                     Escolha 
+                </ion-item-divider>
+
+                <ion-item *ngFor="let acessorio of acessorios">
+                    <ion-label>
+                        <h2>{{ acessorio.nome }}</h2>
+                        <h3>R${{ acessorio.preco }}</h3>
+                    </ion-label>
+                    <ion-toggle #toggle color="secondary" (ionChange)="atualizaTotal(toggle, acessorio)"></ion-toggle> 
+                </ion-item>
+            </ion-item-group>
+
+            <ion-item-group>
+                <ion-item-divider color='light'>
+                    <!-- <ion-icon name="logo-usd"></ion-icon> -->
+                    Preço Total: R${{ precoTotal }}
+                </ion-item-divider>
+            </ion-item-group>
+
+            <button ion-button block >Avançar no Agendamento</button>
+        </ion-card-content>
+    </ion-card>
 </ion-content>
