--- a/aluraCar/src/pages/escolha/escolha.html
+++ b/aluraCar/src/pages/escolha/escolha.html
@@ -38,7 +38,7 @@
                 </ion-item-divider>
             </ion-item-group>
 
-            <button ion-button block >Avançar no Agendamento</button>
+            <button ion-button block (click)="avancaNoAgendamento()">Avançar no Agendamento</button>
         </ion-card-content>
     </ion-card>
 </ion-content>
