--- a/aluraCar/src/pages/home/home.html
+++ b/aluraCar/src/pages/home/home.html
@@ -1,15 +1,16 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      aluraCar
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>aluraCar</ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let carro of carros" (click)=selecionar(carro)>
-      {{ carro.nome }}
-    </ion-item>
-  </ion-list>
+    <ion-list>
+        <ion-item *ngFor="let carro of carros" (click)=selecionar(carro)>
+            {{ carro.nome }}
+        </ion-item>
+    </ion-list>
 </ion-content>
