--- a/aluraCar/src/pages/agendamentos/agendamentos.html
+++ b/aluraCar/src/pages/agendamentos/agendamentos.html
@@ -9,8 +9,13 @@
 
 <ion-content padding>
     <ion-list>
-        <ion-item *ngFor="let agendamento of agendamentos">
-            {{ agendamento.carro.nome }} - {{ agendamento.valor }}
-        </ion-item>
+        <ion-item-sliding *ngFor="let agendamento of agendamentos">
+            <ion-item [class.falha]="!agendamento.confirmado">
+                {{ agendamento.carro.nome }} - {{ agendamento.valor }}
+            </ion-item>
+            <ion-item-options>
+                <button ion-button *ngIf="!agendamento.confirmado" (click)="reenvia(agendamento)">reenviar</button>
+            </ion-item-options>
+        </ion-item-sliding>
     </ion-list>
 </ion-content>
